--- a/mos.yml
+++ b/mos.yml
@@ -3,7 +3,7 @@ description: Implements SSD1306 OLED driver on Mongoose OS
 type: lib
 version: 1.0
 
-platforms: [ esp32 ]
+platforms: [ esp32, esp8266 ]
 
 libs:
   - origin: https://github.com/mongoose-os-libs/i2c
